@@ -51,14 +51,14 @@ import jdk.internal.reflect.Reflection;
 import jdk.internal.vm.annotation.ForceInline;
 
 /**
- * A memory segment models a contiguous region of memory. A memory segment is associated with both spatial
+ * A memory segment models a <em>reference</em> to a contiguous region of memory. A memory segment is associated with both spatial
  * and temporal bounds (e.g. a {@link MemorySession}). Spatial bounds ensure that memory access operations on a memory segment cannot affect a memory location
  * which falls <em>outside</em> the boundaries of the memory segment being accessed. Temporal bounds ensure that memory access
  * operations on a segment cannot occur after the memory session associated with a memory segment has been closed (see {@link MemorySession#close()}).
  *
  * There are many kinds of memory segments:
  * <ul>
- *     <li>{@linkplain MemorySegment#allocateNative(long, long, MemorySession) native memory segments}, backed by off-heap memory;</li>
+ *     <li>{@linkplain MemorySegment#allocateNative(long, long) native memory segments}, backed by off-heap memory;</li>
  *     <li>{@linkplain FileChannel#map(FileChannel.MapMode, long, long, MemorySession) mapped memory segments}, obtained by mapping
  * a file into main memory ({@code mmap}); the contents of a mapped memory segments can be {@linkplain #force() persisted} and
  * {@linkplain #load() loaded} to and from the underlying memory-mapped file;</li>
@@ -69,18 +69,18 @@ import jdk.internal.vm.annotation.ForceInline;
  * {@link ByteBuffer#allocateDirect(int)} method will be backed by off-heap memory.</li>
  * </ul>
  *
- * <h2 id="lifecyle-confinement">Lifecycle and confinement</h2>
+ * <h2>Lifecycle and confinement</h2>
  *
  * Memory segments are associated with a {@linkplain MemorySegment#session() memory session}. As for all resources associated
  * with a memory session, a segment cannot be accessed after its underlying session has been closed. For instance,
  * the following code will result in an exception:
- * {@snippet lang=java :
+ * {@snippet lang = java:
  * MemorySegment segment = null;
  * try (MemorySession session = MemorySession.openConfined()) {
  *     segment = MemorySegment.allocateNative(8, session);
  * }
  * segment.get(ValueLayout.JAVA_LONG, 0); // already closed!
- * }
+ *}
  * Additionally, access to a memory segment is subject to the thread-confinement checks enforced by the owning memory
  * session; that is, if the segment is associated with a shared session, it can be accessed by multiple threads;
  * if it is associated with a confined session, it can only be accessed by the thread which owns the memory session.
@@ -91,7 +91,7 @@ import jdk.internal.vm.annotation.ForceInline;
  * from byte buffer instances obtained calling the {@link #asByteBuffer()} method on a memory segment {@code S}
  * are associated with the same memory session as {@code S}.
  *
- * <h2 id="segment-deref">Dereferencing memory segments</h2>
+ * <h2><a id = "segment-deref">Dereferencing memory segments</a></h2>
  *
  * A memory segment can be read or written using various methods provided in this class (e.g. {@link #get(ValueLayout.OfInt, long)}).
  * Each dereference method takes a {@linkplain ValueLayout value layout}, which specifies the size,
@@ -136,19 +136,19 @@ import jdk.internal.vm.annotation.ForceInline;
  * intHandle.get(segment, 3L); // get int element at offset 3 * 4 = 12
  * }
  *
- * <h2 id="slicing">Slicing memory segments</h2>
+ * <h2>Slicing memory segments</h2>
  *
  * Memory segments support <em>slicing</em>. A memory segment can be used to {@linkplain MemorySegment#asSlice(long, long) obtain}
  * other segments backed by the same underlying memory region, but with <em>stricter</em> spatial bounds than the ones
  * of the original segment:
- * {@snippet lang=java :
+ * {@snippet lang = java:
  * MemorySession session = ...
- * MemorySegment segment = MemorySegment.allocateNative(100, session);
+ * MemorySegment segment = session.allocate(100);
  * MemorySegment slice = segment.asSlice(50, 10);
  * slice.get(ValueLayout.JAVA_INT, 20); // Out of bounds!
  * session.close();
  * slice.get(ValueLayout.JAVA_INT, 0); // Already closed!
- * }
+ *}
  * The above code creates a native segment that is 100 bytes long; then, it creates a slice that starts at offset 50
  * of {@code segment}, and is 10 bytes long. As a result, attempting to read an int value at offset 20 of the
  * {@code slice} segment will result in an exception. The {@linkplain MemorySession temporal bounds} of the original segment
@@ -157,18 +157,18 @@ import jdk.internal.vm.annotation.ForceInline;
  * <p>
  * A client might obtain a {@link Stream} from a segment, which can then be used to slice the segment (according to a given
  * element layout) and even allow multiple threads to work in parallel on disjoint segment slices
- * (to do this, the segment has to be associated with a shared memory session). The following code can be used to sum all int
+ * (to do this, the segment has to be associated with a shared session). The following code can be used to sum all int
  * values in a memory segment in parallel:
  *
  * {@snippet lang=java :
  * try (MemorySession session = MemorySession.openShared()) {
  *     SequenceLayout SEQUENCE_LAYOUT = MemoryLayout.sequenceLayout(1024, ValueLayout.JAVA_INT);
- *     MemorySegment segment = MemorySegment.allocateNative(SEQUENCE_LAYOUT, session);
+ *     MemorySegment segment = session.allocate(SEQUENCE_LAYOUT);
  *     int sum = segment.elements(ValueLayout.JAVA_INT).parallel()
  *                      .mapToInt(s -> s.get(ValueLayout.JAVA_INT, 0))
  *                      .sum();
  * }
- * }
+ *}
  *
  * <h2 id="segment-alignment">Alignment</h2>
  *
@@ -179,14 +179,14 @@ import jdk.internal.vm.annotation.ForceInline;
  *
  * {@snippet lang=java :
  * boolean isAligned(MemorySegment segment, long offset, MemoryLayout layout) {
- *   return ((segment.address().toRawLongValue() + offset) % layout.byteAlignment()) == 0
+ *   return ((segment.address().address() + offset) % layout.byteAlignment()) == 0;
  * }
  * }
  *
  * If, however, the segment being dereferenced is a heap segment, the above function will not work: a heap
- * segment's base address is <em>virtualized</em> and, as such, cannot be used to construct an alignment check. Instead,
- * heap segments are assumed to produce addresses which are never more aligned than the element size of the Java array from which
- * they have originated from, as shown in the following table:
+ * segment's {@linkplain #address() base address} is <em>virtualized</em> and, as such, cannot be used to construct an
+ * alignment check. Instead, heap segments are assumed to produce addresses which are never more aligned than the element
+ * size of the Java array from which they have originated from, as shown in the following table:
  *
  * <blockquote><table class="plain">
  * <caption style="display:none">Array type of an array backing a segment and its address alignment</caption>
@@ -220,18 +220,18 @@ import jdk.internal.vm.annotation.ForceInline;
  * constructed from a {@code byte[]} might have a subset of addresses {@code S} which happen to be 8-byte aligned. But determining
  * which segment addresses belong to {@code S} requires reasoning about details which are ultimately implementation-dependent.
  *
- * <h2 id="restricted-segments">Restricted memory segments</h2>
- * Sometimes it is necessary to turn a memory address obtained from native code into a memory segment with
- * full spatial, temporal and confinement bounds. To do this, clients can {@linkplain #ofAddress(MemoryAddress, long, MemorySession) obtain}
- * a native segment <em>unsafely</em> from a give memory address, by providing the segment size, as well as the segment {@linkplain MemorySession session}.
+ * <h2>Restricted memory segments</h2>
+ * Sometimes it is necessary to turn a raw address (e.g. obtained from native code) into a memory segment with
+ * full spatial, temporal and confinement bounds. To do this, clients can {@linkplain #ofAddress(long, long, MemorySession)}
+ * a native segment <em>unsafely</em>, by providing a new size, as well as a new {@linkplain MemorySession memory session}.
  * This is a <a href="package-summary.html#restricted"><em>restricted</em></a> operation and should be used with
  * caution: for instance, an incorrect segment size could result in a VM crash when attempting to dereference
  * the memory segment.
  * <p>
- * Clients requiring sophisticated, low-level control over mapped memory segments, might consider writing
+ * For example, clients requiring sophisticated, low-level control over mapped memory segments, might consider writing
  * custom mapped memory segment factories; using {@link Linker}, e.g. on Linux, it is possible to call {@code mmap}
  * with the desired parameters; the returned address can be easily wrapped into a memory segment, using
- * {@link MemoryAddress#ofLong(long)} and {@link MemorySegment#ofAddress(MemoryAddress, long, MemorySession)}.
+ * {@link #ofAddress(long, long, MemorySession)}.
  *
  * @implSpec
  * Implementations of this interface are immutable, thread-safe and <a href="{@docRoot}/java.base/java/lang/doc-files/ValueBased.html">value-based</a>.
@@ -239,18 +239,23 @@ import jdk.internal.vm.annotation.ForceInline;
  * @since 19
  */
 @PreviewFeature(feature=PreviewFeature.Feature.FOREIGN)
-public sealed interface MemorySegment extends Addressable permits AbstractMemorySegmentImpl {
+public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
-     * {@return the base memory address associated with this native memory segment}
-     * @throws UnsupportedOperationException if this segment is not a {@linkplain #isNative() native} segment.
-     * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
-     * {@linkplain MemorySession#isAlive() alive}.
-     * @throws WrongThreadException if this method is called from a thread other than the thread owning
-     * the {@linkplain #session() session} associated with this segment.
+     * Returns the base address of the memory region associated with this segment. If this memory segment is
+     * a {@linkplain #isNative() native} memory segment, then the returned address is the off-heap address
+     * at which the native memory region associated with this segment starts. If this memory segment is an array
+     * memory segment, the returned address is the byte offset into the {@linkplain #array()} object associated
+     * with this segment. In other words, the base address of an array segment is always <em>virtualized</em>.
+     *
+     * @return the base address of the memory region associated with this segment.
      */
-    @Override
-    MemoryAddress address();
+    long address();
+
+    /**
+     * {@return the Java array associated with this memory segment, if any}
+     */
+    Optional<Object> array();
 
     /**
      * Returns a spliterator for this memory segment. The returned spliterator reports {@link Spliterator#SIZED},
@@ -348,10 +353,16 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
     MemorySegment asReadOnly();
 
     /**
-     * Returns {@code true} if this segment is a native segment. A native memory segment is
-     * created using the {@link #allocateNative(long, MemorySession)} (and related) factory, or a buffer segment
-     * derived from a {@linkplain ByteBuffer#allocateDirect(int) direct byte buffer} using the {@link #ofBuffer(Buffer)} factory,
-     * or if this is a {@linkplain #isMapped() mapped} segment.
+     * Returns {@code true} if this segment is a native segment. A native memory segment is associated with
+     * an off-heap memory region. This is true if the segment has been obtained in one of the following ways:
+     * <ul>
+     * <li>using the {@link MemorySegment#allocateNative(long, long)} (and related) methods;</li>
+     * <li>using the {@link MemorySession#allocate(long, long)} (and related) methods;</li>
+     * <li>using the {@link #ofBuffer(Buffer)} factory, where the buffer parameter is a {@linkplain ByteBuffer#allocateDirect(int) direct byte buffer};</li>
+     * <li>using the {@link FileChannel#map(FileChannel.MapMode, long, long)} factory, e.g. if this is a {@linkplain #isMapped() mapped} segment;</li>
+     * <li>interacting with {@link Linker} downcall method handles and upcall stubs; or</li>
+     * <li>using the {@link SymbolLookup#lookup(String)} lookup method.</li>
+     * </ul>
      * @return {@code true} if this segment is native segment.
      */
     boolean isNative();
@@ -363,42 +374,6 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      * @return {@code true} if this segment is a mapped segment.
      */
     boolean isMapped();
-
-    /**
-     * Returns a slice of this segment that is the overlap between this and
-     * the provided segment.
-     *
-     * <p>Two segments {@code S1} and {@code S2} are said to overlap if it is possible to find
-     * at least two slices {@code L1} (from {@code S1}) and {@code L2} (from {@code S2}) that are backed by the
-     * same memory region. As such, it is not possible for a
-     * {@linkplain #isNative() native} segment to overlap with a heap segment; in
-     * this case, or when no overlap occurs, {@code null} is returned.
-     *
-     * @param other the segment to test for an overlap with this segment.
-     * @return a slice of this segment (where overlapping occurs).
-     */
-    Optional<MemorySegment> asOverlappingSlice(MemorySegment other);
-
-    /**
-     * Returns the offset, in bytes, of the provided segment, relative to this
-     * segment.
-     *
-     * <p>The offset is relative to the base address of this segment and can be
-     * a negative or positive value. For instance, if both segments are native
-     * segments, the resulting offset can be computed as follows:
-     *
-     * {@snippet lang=java :
-     * other.baseAddress().toRawLongValue() - segment.baseAddress().toRawLongValue()
-     * }
-     *
-     * If the segments share the same base address, {@code 0} is returned. If
-     * {@code other} is a slice of this segment, the offset is always
-     * {@code 0 <= x < this.byteSize()}.
-     *
-     * @param other the segment to retrieve an offset to.
-     * @return the relative offset, in bytes, of the provided segment.
-     */
-    long segmentOffset(MemorySegment other);
 
     /**
      * Fills a value into this memory segment.
@@ -459,7 +434,7 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
     /**
      * Finds and returns the offset, in bytes, of the first mismatch between
      * this segment and the given other segment. The offset is relative to the
-     * {@linkplain #address() base address} of each segment and will be in the
+     * start of each segment and will be in the
      * range of 0 (inclusive) up to the {@linkplain #byteSize() size} (in bytes) of
      * the smaller memory segment (exclusive).
      * <p>
@@ -715,7 +690,7 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      * java.nio.charset.CharsetDecoder} class should be used when more control
      * over the decoding process is required.
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this read operation can be expressed as {@code address().toRowLongValue() + offset}.
+     *               the final address of this read operation can be expressed as {@code address() + offset}.
      * @return a Java string constructed from the bytes read from the given starting address up to (but not including)
      * the first {@code '\0'} terminator character (assuming one is found).
      * @throws IllegalArgumentException if the size of the UTF-8 string is greater than the largest string supported by the platform.
@@ -744,7 +719,7 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      * will appear truncated when read again.
      *
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this write operation can be expressed as {@code address().toRowLongValue() + offset}.
+     *               the final address of this write operation can be expressed as {@code address() + offset}.
      * @param str the Java string to be written into this segment.
      * @throws IndexOutOfBoundsException if {@code str.getBytes().length() + offset >= byteSize()}.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
@@ -762,11 +737,17 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      * The segment starts relative to the buffer's position (inclusive) and ends relative to the buffer's limit (exclusive).
      * <p>
      * If the buffer is {@linkplain ByteBuffer#isReadOnly() read-only}, the resulting segment will also be
-     * {@linkplain ByteBuffer#isReadOnly() read-only}. The memory session associated with this segment can either be the
-     * {@linkplain MemorySession#global() global} memory session, in case the buffer has been created independently,
-     * or some other memory session, in case the buffer has been obtained using {@link #asByteBuffer()}.
-     * <p>
-     * The resulting memory segment keeps a reference to the backing buffer, keeping it <em>reachable</em>.
+     * {@linkplain ByteBuffer#isReadOnly() read-only}. The sesison {@code S} associated with the returned segment is
+     * computed as follows:
+     * <ul>
+     *     <li>if the buffer has been obtained by calling {@link #asByteBuffer()} on a memory segment whose session
+     *     is {@code S'}, then {@code S = S'}; or</li>
+     *     <li>if the buffer is an heap buffer, then {@code A} is the {@linkplain MemorySession#global() global session}; or
+     *     <li>if the buffer is a direct buffer, or mapped byte buffer, then {@code A} is an
+     *     <a href=MemorySession.html#implicit-sessions>implicit session</a> that keeps the buffer reachable.
+     *     Therefore, the off-heap memory associated with the buffer instance will remain available as long as the
+     *     returned segment is reachable.</li>
+     * </ul>
      *
      * @param buffer the buffer instance backing the buffer memory segment.
      * @return a buffer memory segment.
@@ -852,15 +833,63 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
         return HeapMemorySegmentImpl.OfDouble.fromArray(arr);
     }
 
+    /**
+     * A zero-length native memory segment modelling the {@code NULL} address.
+     */
+    MemorySegment NULL = NativeMemorySegmentImpl.makeNativeSegmentUnchecked(0L, 0);
 
     /**
-     * Creates a native memory segment with the given size, base address, and memory session.
+     * Creates a zero-length native memory segment from the given {@linkplain #address() address value}.
+     * The returned segment is associated with the {@linkplain MemorySession#global() global} memory session.
+     * <p>
+     * This is equivalent to the following code:
+     * {@snippet lang = java:
+     * ofAddress(address, 0);
+     *}
+     * @param address the address of the returned native segment.
+     * @return a zero-length native memory segment with the given address.
+     */
+    static MemorySegment ofAddress(long address) {
+        return NativeMemorySegmentImpl.makeNativeSegmentUnchecked(address, 0);
+    }
+
+    /**
+     * Creates a native memory segment with the given size and {@linkplain #address() address value}.
+     * The returned segment is associated with the {@linkplain MemorySession#global() global} memory session.
+     * <p>
+     * This is equivalent to the following code:
+     * {@snippet lang = java:
+     * ofAddress(address, bytesSize, MemorySession.global());
+     *}
+     * This method is <a href="package-summary.html#restricted"><em>restricted</em></a>.
+     * Restricted methods are unsafe, and, if used incorrectly, their use might crash
+     * the JVM or, worse, silently result in memory corruption. Thus, clients should refrain from depending on
+     * restricted methods, and use safe and supported functionalities, where possible.
+     * @param address the address of the returned native segment.
+     * @param bytesSize the size (in bytes) of the returned native segment.
+     * @return a zero-length native memory segment with the given address and size.
+     * @throws IllegalArgumentException if {@code bytesSize < 0}.
+     * @throws IllegalCallerException if access to this method occurs from a module {@code M} and the command line option
+     * {@code --enable-native-access} is specified, but does not mention the module name {@code M}, or
+     * {@code ALL-UNNAMED} in case {@code M} is an unnamed module.
+     */
+    @CallerSensitive
+    static MemorySegment ofAddress(long address, long bytesSize) {
+        Reflection.ensureNativeAccess(Reflection.getCallerClass(), MemorySegment.class, "ofAddress");
+        if (bytesSize < 0) {
+            throw new IllegalArgumentException("Invalid size : " + bytesSize);
+        }
+        return NativeMemorySegmentImpl.makeNativeSegmentUnchecked(address, bytesSize);
+    }
+
+    /**
+     * Creates a native memory segment with the given size, base address and memory session.
      * This method can be useful when interacting with custom memory sources (e.g. custom allocators),
      * where an address to some underlying memory region is typically obtained from foreign code
      * (often as a plain {@code long} value).
      * <p>
      * The returned segment is not read-only (see {@link MemorySegment#isReadOnly()}), and is associated with the
-     * provided memory session.
+     * provided memory session. When the session is closed, the provided cleanup action will be executed.
      * <p>
      * Clients should ensure that the address and bounds refer to a valid region of memory that is accessible for reading and,
      * if appropriate, writing; an attempt to access an invalid memory location from Java code will either return an arbitrary value,
@@ -870,7 +899,6 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      * Restricted methods are unsafe, and, if used incorrectly, their use might crash
      * the JVM or, worse, silently result in memory corruption. Thus, clients should refrain from depending on
      * restricted methods, and use safe and supported functionalities, where possible.
-     *
      *
      * @param address the returned segment's base address.
      * @param bytesSize the desired size.
@@ -885,84 +913,79 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      * {@code ALL-UNNAMED} in case {@code M} is an unnamed module.
      */
     @CallerSensitive
-    static MemorySegment ofAddress(MemoryAddress address, long bytesSize, MemorySession session) {
+    static MemorySegment ofAddress(long address, long bytesSize, MemorySession session) {
         Reflection.ensureNativeAccess(Reflection.getCallerClass(), MemorySegment.class, "ofAddress");
-        Objects.requireNonNull(address);
         Objects.requireNonNull(session);
-        Utils.checkAllocationSizeAndAlign(bytesSize, 1);
+        if (bytesSize < 0) {
+            throw new IllegalArgumentException("Invalid size : " + bytesSize);
+        }
         return NativeMemorySegmentImpl.makeNativeSegmentUnchecked(address, bytesSize, session);
     }
 
     /**
-     * Creates a native memory segment with the given layout and memory session.
-     * A client is responsible for ensuring that the memory session associated with the returned segment is closed
-     * when the segment is no longer in use. Failure to do so will result in off-heap memory leaks.
+     * Creates a native memory segment with the given layout. The returned segment is associated with
+     * an <a href=MemorySession.html#implicit-sessions>implicit session</a>. This means the returned segment
+     * can be accessed by multiple threads, and its backing off-heap memory will not be released as long
+     * as the segment (or any slice derived from it) is kept reachable.
      * <p>
      * This is equivalent to the following code:
-     * {@snippet lang=java :
-     * allocateNative(layout.bytesSize(), layout.bytesAlignment(), session);
-     * }
+     * {@snippet lang = java:
+     * allocateNative(layout.byteSize(), layout.byteAlignment());
+     *}
      * <p>
      * The block of off-heap memory associated with the returned native memory segment is initialized to zero.
      *
      * @param layout the layout of the off-heap memory block backing the native memory segment.
-     * @param session the segment memory session.
      * @return a new native memory segment.
-     * @throws IllegalStateException if {@code session} is not {@linkplain MemorySession#isAlive() alive}.
-     * @throws WrongThreadException if this method is called from a thread other than the thread
-     * {@linkplain MemorySession#ownerThread() owning} {@code session}.
      */
-    static MemorySegment allocateNative(MemoryLayout layout, MemorySession session) {
-        Objects.requireNonNull(session);
+    static MemorySegment allocateNative(MemoryLayout layout) {
         Objects.requireNonNull(layout);
-        return allocateNative(layout.byteSize(), layout.byteAlignment(), session);
+        return allocateNative(layout.byteSize(), layout.byteAlignment());
     }
 
     /**
-     * Creates a native memory segment with the given size (in bytes) and memory session.
-     * A client is responsible for ensuring that the memory session associated with the returned segment is closed
-     * when the segment is no longer in use. Failure to do so will result in off-heap memory leaks.
+     * Creates a native memory segment with the given size (in bytes). The returned segment is associated with
+     * an <a href=MemorySession.html#implicit-sessions>implicit session</a>. This means the returned segment
+     * can be accessed by multiple threads, and its backing off-heap memory will not be released as long
+     * as the segment (or any slice derived from it) is kept reachable.
      * <p>
      * This is equivalent to the following code:
-     * {@snippet lang=java :
-     * allocateNative(bytesSize, 1, session);
-     * }
+     * {@snippet lang = java:
+     * allocateNative(bytesSize, 1L);
+     *}
      * <p>
      * The block of off-heap memory associated with the returned native memory segment is initialized to zero.
      *
      * @param bytesSize the size (in bytes) of the off-heap memory block backing the native memory segment.
-     * @param session the segment temporal bounds.
      * @return a new native memory segment.
      * @throws IllegalArgumentException if {@code bytesSize < 0}.
-     * @throws IllegalStateException if {@code session} is not {@linkplain MemorySession#isAlive() alive}.
-     * @throws WrongThreadException if this method is called from a thread other than the thread
-     * {@linkplain MemorySession#ownerThread() owning} {@code session}.
      */
-    static MemorySegment allocateNative(long bytesSize, MemorySession session) {
-        return allocateNative(bytesSize, 1, session);
+    static MemorySegment allocateNative(long bytesSize) {
+        return allocateNative(bytesSize, 1L);
     }
 
     /**
-     * Creates a native memory segment with the given size (in bytes), alignment constraint (in bytes) and memory session.
-     * A client is responsible for ensuring that the memory session associated with the returned segment is closed when the
-     * segment is no longer in use. Failure to do so will result in off-heap memory leaks.
+     * Creates a native memory segment with the given size (in bytes), alignment constraint (in bytes).
+     * The returned segment is associated with an <a href=MemorySession.html#implicit-sessions>implicit session</a>.
+     * This means the returned segment can be accessed by multiple threads, and its backing off-heap memory will not
+     * be released as long as the segment (or any slice derived from it) is kept reachable.
+     * <p>
+     * This is equivalent to the following code:
+     * {@snippet lang = java:
+     * MemorySession.openImplicit()
+     *              .allocate(bytesSize, alignmentBytes);
+     *}
      * <p>
      * The block of off-heap memory associated with the returned native memory segment is initialized to zero.
      *
      * @param bytesSize the size (in bytes) of the off-heap memory block backing the native memory segment.
      * @param alignmentBytes the alignment constraint (in bytes) of the off-heap memory block backing the native memory segment.
-     * @param session the segment memory session.
      * @return a new native memory segment.
      * @throws IllegalArgumentException if {@code bytesSize < 0}, {@code alignmentBytes <= 0}, or if {@code alignmentBytes}
      * is not a power of 2.
-     * @throws IllegalStateException if {@code session} is not {@linkplain MemorySession#isAlive() alive}.
-     * @throws WrongThreadException if this method is called from a thread other than the thread
-     * {@linkplain MemorySession#ownerThread() owning} {@code session}.
      */
-    static MemorySegment allocateNative(long bytesSize, long alignmentBytes, MemorySession session) {
-        Objects.requireNonNull(session);
-        Utils.checkAllocationSizeAndAlign(bytesSize, alignmentBytes);
-        return NativeMemorySegmentImpl.makeNativeSegment(bytesSize, alignmentBytes, session);
+    static MemorySegment allocateNative(long bytesSize, long alignmentBytes) {
+        return MemorySession.openImplicit().allocate(bytesSize, alignmentBytes);
     }
 
     /**
@@ -1087,8 +1110,8 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be read.
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this read operation can be expressed as {@code address().toRowLongValue() + offset}.
-     * @return a byte value read from this address.
+     *               the final address of this read operation can be expressed as {@code address() + offset}.
+     * @return a byte value read from this segment.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread other than the thread owning
@@ -1130,8 +1153,8 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be read.
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this read operation can be expressed as {@code address().toRowLongValue() + offset}.
-     * @return a boolean value read from this address.
+     *               the final address of this read operation can be expressed as {@code address() + offset}.
+     * @return a boolean value read from this segment.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread other than the thread owning
@@ -1151,7 +1174,7 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be written.
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this write operation can be expressed as {@code address().toRowLongValue() + offset}.
+     *               the final address of this write operation can be expressed as {@code address() + offset}.
      * @param value the boolean value to be written.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
@@ -1173,8 +1196,8 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be read.
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this read operation can be expressed as {@code address().toRowLongValue() + offset}.
-     * @return a char value read from this address.
+     *               the final address of this read operation can be expressed as {@code address() + offset}.
+     * @return a char value read from this segment.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread other than the thread owning
@@ -1194,7 +1217,7 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be written.
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this write operation can be expressed as {@code address().toRowLongValue() + offset}.
+     *               the final address of this write operation can be expressed as {@code address() + offset}.
      * @param value the char value to be written.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
@@ -1216,8 +1239,8 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be read.
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this read operation can be expressed as {@code address().toRowLongValue() + offset}.
-     * @return a short value read from this address.
+     *               the final address of this read operation can be expressed as {@code address() + offset}.
+     * @return a short value read from this segment.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread other than the thread owning
@@ -1237,7 +1260,7 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be written.
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this write operation can be expressed as {@code address().toRowLongValue() + offset}.
+     *               the final address of this write operation can be expressed as {@code address() + offset}.
      * @param value the short value to be written.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
@@ -1259,8 +1282,8 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be read.
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this read operation can be expressed as {@code address().toRowLongValue() + offset}.
-     * @return an int value read from this address.
+     *               the final address of this read operation can be expressed as {@code address() + offset}.
+     * @return an int value read from this segment.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread other than the thread owning
@@ -1280,7 +1303,7 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be written.
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this write operation can be expressed as {@code address().toRowLongValue() + offset}.
+     *               the final address of this write operation can be expressed as {@code address() + offset}.
      * @param value the int value to be written.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
@@ -1302,8 +1325,8 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be read.
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this read operation can be expressed as {@code address().toRowLongValue() + offset}.
-     * @return a float value read from this address.
+     *               the final address of this read operation can be expressed as {@code address() + offset}.
+     * @return a float value read from this segment.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread other than the thread owning
@@ -1323,7 +1346,7 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be written.
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this write operation can be expressed as {@code address().toRowLongValue() + offset}.
+     *               the final address of this write operation can be expressed as {@code address() + offset}.
      * @param value the float value to be written.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
@@ -1345,8 +1368,8 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be read.
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this read operation can be expressed as {@code address().toRowLongValue() + offset}.
-     * @return a long value read from this address.
+     *               the final address of this read operation can be expressed as {@code address() + offset}.
+     * @return a long value read from this segment.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread other than the thread owning
@@ -1366,7 +1389,7 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be written.
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this write operation can be expressed as {@code address().toRowLongValue() + offset}.
+     *               the final address of this write operation can be expressed as {@code address() + offset}.
      * @param value the long value to be written.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
@@ -1388,8 +1411,8 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be read.
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this read operation can be expressed as {@code address().toRowLongValue() + offset}.
-     * @return a double value read from this address.
+     *               the final address of this read operation can be expressed as {@code address() + offset}.
+     * @return a double value read from this segment.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread other than the thread owning
@@ -1409,7 +1432,7 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be written.
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this write operation can be expressed as {@code address().toRowLongValue() + offset}.
+     *               the final address of this write operation can be expressed as {@code address() + offset}.
      * @param value the double value to be written.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
@@ -1431,8 +1454,8 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be read.
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this read operation can be expressed as {@code address().toRowLongValue() + offset}.
-     * @return an address value read from this address.
+     *               the final address of this read operation can be expressed as {@code address() + offset}.
+     * @return a native segment wrapping an address read from this segment.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread other than the thread owning
@@ -1443,8 +1466,8 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      * memory segment.
      */
     @ForceInline
-    default MemoryAddress get(ValueLayout.OfAddress layout, long offset) {
-        return (MemoryAddress)layout.accessHandle().get(this, offset);
+    default MemorySegment get(ValueLayout.OfAddress layout, long offset) {
+        return (MemorySegment)layout.accessHandle().get(this, offset);
     }
 
     /**
@@ -1452,7 +1475,7 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be written.
      * @param offset offset in bytes (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this write operation can be expressed as {@code address().toRowLongValue() + offset}.
+     *               the final address of this write operation can be expressed as {@code address() + offset}.
      * @param value the address value to be written.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
@@ -1465,8 +1488,8 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      * @throws UnsupportedOperationException if this segment is {@linkplain #isReadOnly() read-only}.
      */
     @ForceInline
-    default void set(ValueLayout.OfAddress layout, long offset, Addressable value) {
-        layout.accessHandle().set(this, offset, value.address());
+    default void set(ValueLayout.OfAddress layout, long offset, MemorySegment value) {
+        layout.accessHandle().set(this, offset, value);
     }
 
     /**
@@ -1474,8 +1497,8 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be read.
      * @param index index (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this read operation can be expressed as {@code address().toRowLongValue() + (index * layout.byteSize())}.
-     * @return a char value read from this address.
+     *               the final address of this read operation can be expressed as {@code address() + (index * layout.byteSize())}.
+     * @return a char value read from this segment.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread other than the thread owning
@@ -1498,7 +1521,7 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be written.
      * @param index index (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this write operation can be expressed as {@code address().toRowLongValue() + (index * layout.byteSize())}.
+     *               the final address of this write operation can be expressed as {@code address() + (index * layout.byteSize())}.
      * @param value the char value to be written.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
@@ -1523,8 +1546,8 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be read.
      * @param index index (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this read operation can be expressed as {@code address().toRowLongValue() + (index * layout.byteSize())}.
-     * @return a short value read from this address.
+     *               the final address of this read operation can be expressed as {@code address() + (index * layout.byteSize())}.
+     * @return a short value read from this segment.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread other than the thread owning
@@ -1547,7 +1570,7 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be written.
      * @param index index (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this write operation can be expressed as {@code address().toRowLongValue() + (index * layout.byteSize())}.
+     *               the final address of this write operation can be expressed as {@code address() + (index * layout.byteSize())}.
      * @param value the short value to be written.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
@@ -1572,8 +1595,8 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be read.
      * @param index index (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this read operation can be expressed as {@code address().toRowLongValue() + (index * layout.byteSize())}.
-     * @return an int value read from this address.
+     *               the final address of this read operation can be expressed as {@code address() + (index * layout.byteSize())}.
+     * @return an int value read from this segment.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread other than the thread owning
@@ -1596,7 +1619,7 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be written.
      * @param index index (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this write operation can be expressed as {@code address().toRowLongValue() + (index * layout.byteSize())}.
+     *               the final address of this write operation can be expressed as {@code address() + (index * layout.byteSize())}.
      * @param value the int value to be written.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
@@ -1621,8 +1644,8 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be read.
      * @param index index (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this read operation can be expressed as {@code address().toRowLongValue() + (index * layout.byteSize())}.
-     * @return a float value read from this address.
+     *               the final address of this read operation can be expressed as {@code address() + (index * layout.byteSize())}.
+     * @return a float value read from this segment.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread other than the thread owning
@@ -1645,7 +1668,7 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be written.
      * @param index index (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this write operation can be expressed as {@code address().toRowLongValue() + (index * layout.byteSize())}.
+     *               the final address of this write operation can be expressed as {@code address() + (index * layout.byteSize())}.
      * @param value the float value to be written.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
@@ -1670,8 +1693,8 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be read.
      * @param index index (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this read operation can be expressed as {@code address().toRowLongValue() + (index * layout.byteSize())}.
-     * @return a long value read from this address.
+     *               the final address of this read operation can be expressed as {@code address() + (index * layout.byteSize())}.
+     * @return a long value read from this segment.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread other than the thread owning
@@ -1694,7 +1717,7 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be written.
      * @param index index (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this write operation can be expressed as {@code address().toRowLongValue() + (index * layout.byteSize())}.
+     *               the final address of this write operation can be expressed as {@code address() + (index * layout.byteSize())}.
      * @param value the long value to be written.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
@@ -1719,8 +1742,8 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be read.
      * @param index index (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this read operation can be expressed as {@code address().toRowLongValue() + (index * layout.byteSize())}.
-     * @return a double value read from this address.
+     *               the final address of this read operation can be expressed as {@code address() + (index * layout.byteSize())}.
+     * @return a double value read from this segment.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread other than the thread owning
@@ -1743,7 +1766,7 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be written.
      * @param index index (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this write operation can be expressed as {@code address().toRowLongValue() + (index * layout.byteSize())}.
+     *               the final address of this write operation can be expressed as {@code address() + (index * layout.byteSize())}.
      * @param value the double value to be written.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
@@ -1764,12 +1787,16 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
     }
 
     /**
-     * Reads an address from this segment at the given index, scaled by the given layout size.
+     * Reads an address from this segment at the given at the given index, scaled by the given layout size. The read address is wrapped in
+     * a native segment, associated with the {@linkplain MemorySession#global() global} memory session. Under normal conditions,
+     * the size of the returned segment is {@code 0}. However, if the provided layout is an
+     * {@linkplain ValueLayout.OfAddress#asUnbounded() unbounded} address layout, then the size of the returned
+     * segment is {@code Long.MAX_VALUE}.
      *
      * @param layout the layout of the memory region to be read.
      * @param index index (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this read operation can be expressed as {@code address().toRowLongValue() + (index * layout.byteSize())}.
-     * @return an address value read from this address.
+     *               the final address of this read operation can be expressed as {@code address() + (index * layout.byteSize())}.
+     * @return a native segment wrapping an address read from this segment.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread other than the thread owning
@@ -1781,10 +1808,10 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      * memory segment.
      */
     @ForceInline
-    default MemoryAddress getAtIndex(ValueLayout.OfAddress layout, long index) {
+    default MemorySegment getAtIndex(ValueLayout.OfAddress layout, long index) {
         Utils.checkElementAlignment(layout, "Layout alignment greater than its size");
         // note: we know size is a small value (as it comes from ValueLayout::byteSize())
-        return (MemoryAddress)layout.accessHandle().get(this, index * layout.byteSize());
+        return (MemorySegment)layout.accessHandle().get(this, index * layout.byteSize());
     }
 
     /**
@@ -1792,7 +1819,7 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      *
      * @param layout the layout of the memory region to be written.
      * @param index index (relative to this segment). For instance, if this segment is a {@linkplain #isNative() native} segment,
-     *               the final address of this write operation can be expressed as {@code address().toRowLongValue() + (index * layout.byteSize())}.
+     *               the final address of this write operation can be expressed as {@code address() + (index * layout.byteSize())}.
      * @param value the address value to be written.
      * @throws IllegalStateException if the {@linkplain #session() session} associated with this segment is not
      * {@linkplain MemorySession#isAlive() alive}.
@@ -1806,32 +1833,32 @@ public sealed interface MemorySegment extends Addressable permits AbstractMemory
      * @throws UnsupportedOperationException if this segment is {@linkplain #isReadOnly() read-only}.
      */
     @ForceInline
-    default void setAtIndex(ValueLayout.OfAddress layout, long index, Addressable value) {
+    default void setAtIndex(ValueLayout.OfAddress layout, long index, MemorySegment value) {
         Utils.checkElementAlignment(layout, "Layout alignment greater than its size");
         // note: we know size is a small value (as it comes from ValueLayout::byteSize())
-        layout.accessHandle().set(this, index * layout.byteSize(), value.address());
+        layout.accessHandle().set(this, index * layout.byteSize(), value);
     }
 
     /**
      * Compares the specified object with this memory segment for equality. Returns {@code true} if and only if the specified
-     * object is also a memory segment, and if that segment refers to the same memory region as this segment. More specifically,
-     * for two segments to be considered equals, all the following must be true:
+     * object is also a memory segment, and if that segment refers to the same memory location as this segment. More specifically,
+     * for two segments {@code s1} and {@code s2} to be considered equals, all the following must be true:
      * <ul>
-     *     <li>the two segments must be of the same kind; either both are {@linkplain #isNative() native segments},
-     *     backed by off-heap memory, or both are backed by on-heap memory;
-     *     <li>if the two segments are {@linkplain #isNative() native segments}, their {@link #address() base address}
-     *     must be {@linkplain MemoryAddress#equals(Object) equal}. Otherwise, the two segments must wrap the
-     *     same Java array instance, at the same starting offset;</li>
-     *     <li>the two segments must have the same {@linkplain #byteSize() size}; and</li>
-     *     <li>the two segments must have the {@linkplain MemorySession#equals(Object) same} {@linkplain #session() temporal bounds}.
+     *     <li>{@code s1.array().equals(s2.array())}, that is, the two segments must be of the same kind;
+     *     either both are {@linkplain #isNative() native segments}, backed by off-heap memory, or both are backed by
+     *     the same on-heap Java array;
+     *     <li>{@code s1.address() == s2.address()}, that is, the base address of the two segments should be the same.
+     *     This means that the two segments either refer at the same off-heap memory location, or they refer
+     *     to the same position inside their associated Java array instance.</li>
      * </ul>
      * @apiNote This method does not perform a structural comparison of the contents of the two memory segments. Clients can
-     * compare memory segments structurally by using the {@link #mismatch(MemorySegment)} method instead.
+     * compare memory segments structurally by using the {@link #mismatch(MemorySegment)} method instead. Note that this
+     * method does <em>not</em> compare the temporal and spatial bounds of two segments. As such it is suitable
+     * to perform address checks, such as checking if a native memory segment has the {@code NULL} address.
      *
      * @param that the object to be compared for equality with this memory segment.
      * @return {@code true} if the specified object is equal to this memory segment.
      * @see #mismatch(MemorySegment)
-     * @see #asOverlappingSlice(MemorySegment)
      */
     @Override
     boolean equals(Object that);
